<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OilCalc</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lap_name">Lap %d</string>
    <string name="menu_clear_all">clear all</string>
    <string name="running_timer_notification_title">note</string>
    <string name="sample_time">00:00</string>
    <string name="start">Start</string>
    <string name="task_name">Task Name</string>
    <string name="date_select">Date Select</string>
    <string name="description">Description</string>
    <string name="finished">Done</string>
    <string name="detail_name">Detail Name</string>
    <string name="detail_date">Detail Date</string>
    <string name="detail_desc">Detail Desc</string>

</resources>
